[gd_scene load_steps=8 format=2]

[ext_resource path="res://PlayerMovement/PlayerMovement.gd" type="Script" id=1]
[ext_resource path="res://Firearms/Prefabs/CubeGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://Firearms/Prefabs/CylinderGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://Firearms/WeaponSwitch.gd" type="Script" id=4]
[ext_resource path="res://Global.tres" type="Theme" id=5]
[ext_resource path="res://MainMenu/PauseMenu.gd" type="Script" id=6]

[sub_resource type="CapsuleShape" id=1]

[node name="Player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 1 )

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CameraHolder" type="Spatial" parent="."]
transform = Transform( 1, -1.74846e-07, 0, 1.74846e-07, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraHolder"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Weapons" type="Spatial" parent="CameraHolder/Camera"]
script = ExtResource( 4 )

[node name="CubeGun" parent="CameraHolder/Camera/Weapons" instance=ExtResource( 2 )]
transform = Transform( -1, -3.49691e-07, -8.74228e-08, -3.49691e-07, 1, -4.58565e-14, 8.74228e-08, -1.52855e-14, -1, 1.9233e-07, -0.7, -0.8 )

[node name="CylinderGun" parent="CameraHolder/Camera/Weapons" instance=ExtResource( 3 )]
transform = Transform( -1, -3.49692e-07, -8.74228e-08, -3.49692e-07, 1, -4.58566e-14, 8.74228e-08, -1.52855e-14, -1, 2.273e-07, -0.7, -1.2 )

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DamageOverlay" type="ColorRect" parent="UserInterface"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0, 0, 0.137255 )

[node name="DamageTimer" type="Timer" parent="UserInterface"]

[node name="Timer" type="Label" parent="UserInterface"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -19.0
size_flags_horizontal = 3
theme = ExtResource( 5 )
text = "00:00:00"
align = 1
valign = 1

[node name="PauseMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.627451 )

[node name="Buttons" type="VBoxContainer" parent="PauseMenu"]
anchor_bottom = 1.0
margin_right = 191.0
__meta__ = {
"_edit_group_": true
}

[node name="ResumeButton" type="Button" parent="PauseMenu/Buttons"]
margin_right = 191.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PauseMenu/Buttons"]
margin_top = 182.0
margin_right = 191.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Main Menu"

[node name="FinishMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="FinishMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.627451 )

[node name="Buttons" type="VBoxContainer" parent="FinishMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -51.5
margin_right = 121.0
margin_bottom = 51.5
__meta__ = {
"_edit_group_": true
}

[node name="Lables" type="HBoxContainer" parent="FinishMenu/Buttons"]
margin_right = 242.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="MissionFinishedLabel" type="Label" parent="FinishMenu/Buttons/Lables"]
margin_right = 119.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 5 )
text = "Mission Finished!"
align = 1
valign = 1

[node name="TimeLabel" type="Label" parent="FinishMenu/Buttons/Lables"]
margin_left = 123.0
margin_right = 242.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource( 5 )
text = "00.00.00"
align = 2
valign = 1

[node name="MainMenuButton" type="Button" parent="FinishMenu/Buttons"]
margin_top = 23.0
margin_right = 242.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
text = "Main Menu"

[connection signal="timeout" from="UserInterface/DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="pressed" from="PauseMenu/Buttons/ResumeButton" to="PauseMenu" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseMenu/Buttons/MainMenuButton" to="PauseMenu" method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="FinishMenu/Buttons/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
